# okular

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  changelog  docker-compose.yml  nginx.conf  pyproject.toml
okular/: __init__.py  main.py  models.py  parser.py  router.py
okular/db/: models.py
okular/viewmodels/: base.py  job.py  job_dashboard.py  jobs.py
okular/views/: __init__.py  base.py  job.py  job_dashboard.py  jobs.py  update.py
okular/views/templates/: base.html  job.html  job_dashboard.html  jobs.html
tests/: test_parser.py
