[tool.poetry]
name = "okular"
version = "1.0.0"
description = "Parser and quick preview for Jenkins jobs logs"
authors = ["Szymon Kłos <eszkadev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
gunicorn = "^20.1.0"
jenkinsapi = "^0.3.13"
pytest = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
